Fixed color contrast

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: #155800;
+  --light-color: #61f534;
 }
 
 body {
