--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,13 +11,13 @@
 }
 
 h1 {
-  color: var(--main-color);
+  color: var(--light-color);
   font-weight: bold;
   font-size: 1.5rem;
 }
 
 .menu {
-  color: var(--main-color);
+  color: var(--light-color);
   font-weight: bolder;
   font-size: 20px;
   margin: 20px;
